--- a/doc/references.bib
+++ b/doc/references.bib
@@ -1,68 +1,37 @@
-@book{Clean_Code,
-  author    = "{Robert C. Martin}",
-  title     = "{Clean Code}",
-  year      = "2008",
-  publisher = "{Prentice Hall}"
-}
 
-@book{Tailwind_CSS,
-    author = "{Noel Rappin}",
-    title = "{Modern CSS with Tailwind: Flexible Styling Without the Fuss}",
-    year = "2022",
-    publisher = "{Pragmatic Bookshelf}"
-}
 
-@book{Learning_TypeScript,
-  author    = "{Josh Goldberg}", 
-  title     = "{Learning TypeScript: Enhance Your Web Development Skills Using Type-Safe JavaScript}",
-  year      = "2022",
-  publisher = "{O'Reilly Media}"
-}
-
-@book{React_and_React_Native,
-  author    = "{Mikhail Sakhniuk}",
-  title     = "{React and React Native - Fifth Edition: Build cross-platform JavaScript and TypeScript apps for the web, desktop, and mobile}",
-  year      = "2024",
-  publisher = "{Packt Publishing}"
-}
-
-@book{Coinbase_article,
-  author = "{Saurabh Suratkar, Mahesh Shirole, Sunil Bhirud}",
-  title = "{Cryptocurrency Wallet: A Review}",
-  conference = "{2020 4th International Conference on Computer, Communication and Signal Processing (ICCCSP)}",
-  year = "2024"
-}
-
-@book{MetaMask_book,
-    author = "{Wei-Meng Lee}",
-    title = "{Using the MetaMask Chrome Extension. In: Beginning Ethereum Smart Contracts Programming.}",
-    publisher ="{Apress, Berkeley, CA}",
-    year = "2019"
-}
-
-@book{Coinbase_blog,
-  author    = "{Harry Tormey}",
-  title     = "{Announcing Coinbase's successful transition to React Native}",
-  year      = "2020",
-}
-
-@misc{Expo_Docs,
-  author    = "{Expo.dev Team}",
-  title     = "{Expo Documentation}",
-  howpublished       = {\url{https://docs.expo.dev/}},
-  note      = "Accessed: 03.11.2024"
-}
-
-@misc{React_Native_Docs,
-  author    = "{Meta Open Source}",
-  title     = "{React Native Documentation}",
-  howpublished       = {\url{https://reactnative.dev/}},
-  note      = "Accessed: 03.11.2024"
-}
-
-@misc{Flutter_Docs,
+@misc{Angular_Docs,
   author    = "{Google}",
-  title     = "{Flutter Documentation}",
-  howpublished       = {\url{https://docs.flutter.dev/}},
-  note      = "Accessed: 08.12.2024"
+  title     = "{Angular Documentation}",
+  howpublished       = {\url{https://angular.io/docs}},
+  note      = "Accessed: 10.01.2026"
+}
+
+@book{RxJS_Action,
+  author    = "{Paul P. Daniels, Luis Atencio}",
+  title     = "{RxJS in Action}",
+  year      = "2017",
+  publisher = "{Manning Publications}"
+}
+
+@misc{React_Concurrent_Docs,
+  author    = "{Meta Open Source}",
+  title     = "{React Reference: Concurrent Rendering}",
+  howpublished       = {\url{https://react.dev/reference/react/useTransition}},
+  note      = "Accessed: 10.01.2026"
+}
+
+@book{Cormen_Intro,
+  author    = "{Thomas H. Cormen, Charles E. Leiserson, Ronald L. Rivest, Clifford Stein}",
+  title     = "{Introduction to Algorithms}",
+  year      = "2022",
+  publisher = "{MIT Press}",
+  edition   = "4th"
+}
+
+@misc{Web_Vitals,
+  author    = "{Google Developers}",
+  title     = "{Web Vitals: Essential metrics for a healthy site}",
+  howpublished       = {\url{https://web.dev/vitals/}},
+  note      = "Accessed: 15.01.2026"
 }
